--- a/docs/preprocess.ipynb
+++ b/docs/preprocess.ipynb
@@ -5,7 +5,7 @@
    "id": "3b46ee32",
    "metadata": {},
    "source": [
-    "# Data Preprocessing\n",
+    "# UFC\n",
     "\n",
     "Student names: FIRST_STUDENT, SECOND_STUDENT, THIRD_STUDENT, FORTH_STUDENT\n",
     "\n",
